# mozjpeg-wasm

./: .gitignore  Cargo.toml  README.md  build.sh  package.json
.cargo/: config
src/: main.rs  transform.rs
