[package]
authors = ["Tommaso Pifferi <p.tommy93@gmail.com>"]
edition = "2018"
name = "mozjpeg-wasm"
version = "0.1.0"

[dependencies]
wee_alloc = "0.4.5"

[dependencies.mozjpeg-sys]
default-features = false
features = ["jpegtran"]
git = "https://github.com/neslinesli93/mozjpeg-sys"
branch = "feature/jpeg-transform-module"
